feat: initialize React application rendering DevOpsAssessment component

--- a/index.html
+++ b/index.html
@@ -412,3 +412,9 @@
     );
   }
 }
+
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(<DevOpsAssessment />);
+</script>
+</body>
+</html>
